--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
 
-title: [Codeforpassion.com]
+title: [Code For Passion]
 description: [This website provides with the best content possible from the internet.]
