--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,12 @@
-theme: jekyll-theme-hacker
 
-title: [Code For Passion]
-description: [This website provides with the best content possible from the internet.]
+
+
+title: CodeForPassion
+author: Bablu Kumar
+email: tefletonpost@gmail.com
+description: This site provides the best possible contents from the web and presents them to you in an easy way.
+twitter_username: @tefletonpost
+
+# Build settings
+markdown: kramdown
+theme: jekyll-theme-hacker
