--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: CodeForPassion
 author: Bablu Kumar
 email: tefletonpost@gmail.com
 description: This site provides the best possible contents from the web and presents them to you in an easy way.
-twitter_username: @tefletonpost
+twitter_username: tefletonpost
 
 # Build settings
 markdown: kramdown
